# bf

./: .gitignore  Cargo.toml  TODO  tarpaulin.toml
benches/: file_hash.rs
bf/: Cargo.toml
bf/src/: lib.rs
bf/src/interpreter/: cell.rs  interpreter.rs  tape.rs
bf_cli/: Cargo.toml
bf_cli/benches/: file_hash.rs
bf_cli/src/: cli.rs  err.rs  main.rs
bf_cli/src/commands/: mod.rs
bf_cli/src/commands/generate/: cli.rs  mod.rs  read.rs
bf_cli/src/commands/inline_scroll/: cli.rs  mod.rs
bf_cli/src/commands/input_debug/: app.rs  cli.rs  mod.rs  state.rs
bf_cli/src/commands/live/: app.rs  cli.rs  logging.rs  mod.rs
bf_cli/src/commands/run/: app.rs  cli.rs  mod.rs
bf_cli/src/utils/: read.rs
bf_tui/: Cargo.toml
bf_tui/src/: async_interpreter.rs  events.rs  lib.rs  lines.rs  macros.rs  test_utils.rs
bf_tui/src/widgets/: cell.rs  mod.rs  spinner.rs  stack_vertical.rs  tape.rs
bf_tui/src/widgets/live/: app.rs  header.rs  mod.rs  tape.rs  textarea.rs
bf_tui/src/widgets/live/dialogs/: button.rs  drop_shadow.rs  error.rs  file_save_as.rs  mod.rs  script_auto_input.rs  script_input.rs  unsaved_changes.rs
bf_tui/src/widgets/live/dialogues/: button.rs  drop_shadow.rs  error.rs  file_save_as.rs  mod.rs  script_auto_input.rs  script_input.rs  unsaved_changes.rs
bf_tui/src/widgets/run/: app.rs  mod.rs
bf_utils/: Cargo.toml
bf_utils/src/: hash.rs  lib.rs  macros.rs  sync.rs
examples/: a.bf  domain-count-down.bf  domain-count-up.bf  hello-world.bf  inf-tape.bf  print.bf  t.bf
scripts/: crates-io-keywords.sh  keywords.txt
src/: field.rs  input_debug.rs  interpreter.rs  main.rs  print.rs  printer.rs  read.rs  subcmd.rs  tui_util.rs  ui.rs  util.rs
src/commands/: mod.rs
src/commands/generate/: cli.rs  mod.rs
src/commands/inline_scroll/: cli.rs  mod.rs
src/commands/input_debug/: app.rs  cli.rs  state.rs
src/commands/live/: app.rs  cli.rs  dialogue.rs  mod.rs  textarea.rs
src/commands/live/widgets/: app.rs  dialogues.rs  footer.rs  header.rs  mod.rs  tape.rs
src/commands/live/widgets/dialogues/: button.rs  drop_shadow.rs  mod.rs
src/commands/run/: app.rs  cli.rs  mod.rs
src/commands/run/widgets/: app.rs  mod.rs
src/generate/: cli.rs  mod.rs  read.rs
src/input_debug/: app.rs  cli.rs  mod.rs  state.rs
src/interpreter/: cell.rs  interpreter.rs  mod.rs  tape.rs
src/interpreter/tape/: cell.rs
src/live/: app.rs  async_interpreter.rs  cli.rs  dialogue.rs  editable.rs  field.rs  mod.rs  textarea.rs
src/live/widgets/: footer.rs  header.rs  mod.rs  stack.rs  tape.rs
src/run/: cli.rs  mod.rs  print.rs
src/run/interpreter/: mod.rs
src/util/: cli.rs  common.rs  err.rs  macros.rs  mod.rs  read.rs  subcmd.rs  sync.rs  test.rs  tui.rs
src/widgets/: cell.rs  mod.rs  spinner.rs  tape.rs
