[package]
name = "bf"
version = "0.1.0"
authors = ["Nelson Earle <nelson.earle137@gmail.com>"]
edition = "2021"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
crossterm = "0.27"
itertools = "0.9"
sha-1 = { version = "0.10", features = ["asm"] }
structopt = "0.3"
term_size = "0.3"
ratatui = "0.23"
ratatui-textarea = "0.3"
