[package]
name = "bf_tui"
description = "TODO"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nelson137/bf"
readme = "README.md"
keywords = ["brainfuck", "esolang", "interpreter", "scripting", "tui"]
categories = ["command-line-utilities", "compilers"]

[dependencies.bf]
path = "../bf"

[dependencies.bf_utils]
path = "../bf_utils"

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
delegate = { workspace = true }
itertools = { workspace = true }
ratatui = { workspace = true }
ratatui-textarea = { workspace = true }
sha-1 = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fastrand = "2.0.1"
test-case = "3.2"
