[package]
name = "bf_utils"
description = "TODO"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nelson137/bf"
readme = "README.md"
keywords = ["brainfuck", "esolang", "interpreter", "scripting"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
sha-1 = { workspace = true }
